testdeploy2.yaml
#### nginx2 ####
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: nginx2
    service: nginx2
  name: nginx2
spec:
  type: NodePort 
  ports: 
  - port: 9081
    targetPort: 81
    protocol: TCP
    name: https
  selector: 
    app: nginx2
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: nginx2
    version: v1
  name: nginx2-v1
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: nginx2
      version: v1
  template: 
    metadata: 
      labels: 
        app: nginx2
        version: v1
    spec: 
      containers:     
      - name: nginx2
        image: "nginx:1.14.2"
        ports: 
        - containerPort: 81
      nodeSelector:
        hostname: node5
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: nginx2
    version: v2
  name: nginx2-v2
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: nginx2
      version: v2
  template: 
    metadata: 
      labels: 
        app: nginx2
        version: v2
    spec: 
      containers:     
      - name: nginx2
        image: "nginx:1.14.2"
        ports: 
        - containerPort: 81
      nodeSelector:
        hostname: node6
