testdeploy_SERVICEONLY.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: nginx1
    service: nginx1
  name: nginx1
spec: 
  ports: 
  - port: 8080
    name: http
  selector: 
    app: nginx1
