ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx1
spec:
  hosts:
  - "*"
  gateways:
  - nginx-gateway
  http:
    - match:
      - uri:
          prefix: /nginx1
      route:
        - destination:
            host: nginx1
            port:
              number: 9080
    # - match:
    #   - uri:
    #       prefix: /v2
    #   route:
    #     - destination:
    #         host: nginx1-v2
    #         port:
    #           number: 9080
