socket-rule.yaml
#### DESTINATION RULES ####
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dest-server
spec:
  host: sp-server
  # trafficPolicy:
  #   loadBalancer:
  #     simple: LEAST_CONN
  subsets:
  - name: sp-server-v1
    labels: 
      version: v1
  - name: sp-server-v2
    labels:
      version: v2
