testnetwork.yaml
#### VIRTUAL SERVICE ####
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx1
spec:
  hosts: 
  - nginx1
  http:
  - route:
    - destination:
        host: nginx2
        subset: v1
      weight: 35
    - destination:
        host: nginx2
        subset: v2
      weight: 65
